Scenario's 1 and 2/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\extensions\greenfoot.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\bluejcore.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\bluejeditor.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\bluejext.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\AppleJavaExtensions.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\junit-4.8.2.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\bluej.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\commons-codec-1.3.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\jl1.0.1.jar;C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\opencsv-2.3.jar;C:\Users\giuseppemag\Desktop\Greenfoot test\test
-d
C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\giuseppemag\Desktop\bluej310-greenfoot230-standalone\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\giuseppemag\Desktop\Greenfoot test\test\Game.java
<---- end of javadoc command ---->
Loading source file C:\Users\giuseppemag\Desktop\Greenfoot test\test\Game.java...
Constructing Javadoc information...
Standard Doclet version 1.7.0_21
Building tree for all the packages and classes...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\Game.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\Game.DrawingContext.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\Game.KeyState.html...
C:\Users\giuseppemag\Desktop\Greenfoot test\test\AsteroidShooterLogic.java:3: error: cannot find symbol
import static Game.*;
              ^
  symbol: class Game
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\Game.Texture2D.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\Game.Vector2.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\package-frame.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\package-summary.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\allclasses-frame.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\allclasses-noframe.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\index.html...
Generating C:\Users\giuseppemag\Desktop\Greenfoot test\test\doc\stylesheet.css...
1 error
